Closed Bug 221187 Opened 22 years ago Closed 22 years ago

Can't build with Forte6 Update2 on Solaris

Categories

(Core :: CSS Parsing and Computation, defect)

Sun
SunOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: keeda, Assigned: dbaron)

Details

Attachments

(1 file)

chekin for bug 113173 seems to have exposed a bug in the Sun compiler. (nebiros tinderbox has been horked for a few days now) I tracked it down to the changes in nsStyleContentData in nsStyleStruct.h. Commenting out the dtor made the errors go away. Un-inlining it did not. bz suggested I should try adding a ctor. This seems to have worked. (I'm half way along in building layout)
Attached patch workaroundSplinter Review
Is this acceptable ?
Attachment #132625 - Flags: review?(dbaron)
Attachment #132625 - Flags: superreview+
Attachment #132625 - Flags: review?(dbaron)
Attachment #132625 - Flags: review+
Thanks. Checked in, although with a comment, and without a stray semicolon.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: