Add empty constructor to fix Sun compiler bustage.  b=221187  Patch from Harshal Pradhan <keeda@hotpop.com>.  r+sr=dbaron